--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,10 +28,11 @@ body {
 header {
    position: fixed;
    top: 0;
+   z-index: 10;
    width: 100%;
    height: auto;
    padding: 20px 80px;
-   background-color: #ffffff;
+   background-color: #fffffff0;
    border-bottom-left-radius: 20px;
    border-bottom-right-radius: 20px;
    box-shadow: 0 5px 10px #00000035;
@@ -63,8 +64,8 @@ header ul li:hover, header ul a:hover {
 }
 
 .creative-business {
-   margin-top: 100px;
-   width: 100%;
+   margin: 50px auto 0 auto;
+   width: 100%; min-width: 1300px; max-width: 1850px;
    height: auto;
    padding: 20px;
    display: flex;
@@ -74,6 +75,7 @@ header ul li:hover, header ul a:hover {
 }
 .creative-business > div {
    width: 30%;
+   height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
@@ -105,7 +107,7 @@ header ul li:hover, header ul a:hover {
    border: 2px solid var(--color-06);
 }
 
-.get-started {
+.get-started, .get-started-minimalist {
    /* width: 80px; */
    /* height: 30px; */
    padding: 10px 20px;
@@ -114,7 +116,105 @@ header ul li:hover, header ul a:hover {
    background-color: var(--color-01);
    font-family: var(--font-padrao);
    font-weight: 500;
+   cursor: pointer;
+   transition: all .4s;
 }
+.get-started-minimalist {
+   border: 2px solid var(--color-01);
+   background-color: white;
+}
+.get-started:hover, .get-started-minimalist:hover {
+   cursor: pointer;
+   transition: all .4s;
+   background-color: var(--color-02);
+}
+.get-started-minimalist:hover {
+   border: 2px solid var(--color-03);
+   background-color: var(--color-03);
+}
+
+.creative-business .image img {
+   width: 320px;
+}
+
+
+
+.section {
+   margin-top: 120px;
+   width: 100%; min-width: 1300px; max-width: 1850px;
+   height: auto;
+   padding: 20px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   gap: 30px;
+}
+.section > div {
+   width: 50%;
+   height: 100%;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+}
+.section .image {
+   align-items: flex-end;
+}
+.section .image img {
+   width: 330px;
+   margin-right: 100px;
+}
+.section .content {
+   align-items: flex-start;
+   gap: 15px;
+}
+.section .content h2 {
+   font-size: 2.3rem;
+   color: var(--color-06);
+   line-height: 2.4rem;
+}
+.section .content p {
+   width: 500px;
+}
+
+.make-product .image {
+   align-items: flex-start;
+}
+.make-product .image img {
+   margin-right: 0;
+   margin-left: 100px;
+}
+.make-product .content {
+   align-items: flex-end;
+}
+
+
+.start {
+   margin-top: 50px;
+   width: 100%; min-width: 1300px; max-width: 1850px;
+   height: auto;
+   padding: 50px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   background-color: #dddddd;
+}
+.start > div {
+   width: 70%; min-width: 300px; max-width: 1000px;
+   background-color: white;
+   border-radius: 20px;
+   padding: 40px;
+   text-align: center;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   gap: 10px;
+   box-shadow: 4px 4px 10px #0000003e;
+}
+
+
+
 
 
 
