--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,7 @@ body {
    height: auto;
    font-family: var(--font-padrao);
    padding-top: 122px;
+   transition: all .4s;
 }
 
 header {
@@ -35,14 +36,16 @@ header {
    background-color: #fffffff0;
    border-bottom-left-radius: 20px;
    border-bottom-right-radius: 20px;
-   box-shadow: 0 5px 10px #00000035;
+   box-shadow: 0 5px 10px #00000019;
    display: flex;
    justify-content: space-between;
    align-items: center;
 }
+
 header img {
    width: 130px;
 }
+
 header ul {
    list-style: none;
    display: flex;
@@ -50,22 +53,28 @@ header ul {
    align-items: center;
    gap: 30px;
 }
-header ul li, header ul a{
+
+header ul li,
+header ul a {
    font-size: 1rem;
    color: var(--color-06);
    text-decoration: none;
    cursor: pointer;
    transition: all .4s;
 }
-header ul li:hover, header ul a:hover {
+
+header ul li:hover,
+header ul a:hover {
    cursor: pointer;
    transition: all .4s;
    color: var(--color-01);
 }
 
 .creative-business {
-   margin: 50px auto 0 auto;
-   width: 100%; min-width: 1300px; max-width: 1850px;
+   margin: 80px auto 0 auto;
+   width: 100%;
+   /* min-width: 1300px; */
+   max-width: 1360px;
    height: auto;
    padding: 20px;
    display: flex;
@@ -73,28 +82,34 @@ header ul li:hover, header ul a:hover {
    align-items: center;
    gap: 30px;
 }
+
 .creative-business > div {
-   width: 30%;
+   width: 40%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
+   text-align: left;
 }
+
 .creative-business .content h1 {
    font-size: 3.5rem;
    line-height: 3.8rem;
    color: var(--color-06);
 }
+
 .creative-business .content p {
    margin-top: 10px;
    color: var(--color-06);
    font-size: 1rem;
 }
+
 .creative-business .content form {
    margin-top: 20px;
    width: 100%;
 }
+
 .creative-business .content form .input-email {
    width: 220px;
    height: 30px;
@@ -102,12 +117,14 @@ header ul li:hover, header ul a:hover {
    border-radius: 20px;
    border: 1px solid var(--color-06);
 }
+
 .creative-business .content form .input-email:focus {
    outline: none;
    border: 2px solid var(--color-06);
 }
 
-.get-started, .get-started-minimalist {
+.get-started,
+.get-started-minimalist {
    /* width: 80px; */
    /* height: 30px; */
    padding: 10px 20px;
@@ -119,15 +136,19 @@ header ul li:hover, header ul a:hover {
    cursor: pointer;
    transition: all .4s;
 }
+
 .get-started-minimalist {
    border: 2px solid var(--color-01);
-   background-color: white;
+   background-color: transparent;
 }
-.get-started:hover, .get-started-minimalist:hover {
+
+.get-started:hover,
+.get-started-minimalist:hover {
    cursor: pointer;
    transition: all .4s;
    background-color: var(--color-02);
 }
+
 .get-started-minimalist:hover {
    border: 2px solid var(--color-03);
    background-color: var(--color-03);
@@ -140,16 +161,20 @@ header ul li:hover, header ul a:hover {
 
 
 .section {
-   margin-top: 120px;
-   width: 100%; min-width: 1300px; max-width: 1850px;
+   margin: 180px auto 0 auto;
+   width: 100%;
+   /* min-width: 1300px; */
+   max-width: 1850px;
    height: auto;
-   padding: 20px;
+   padding: 20px 50px;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 30px;
+   text-align: left;
 }
-.section > div {
+
+.section>div {
    width: 50%;
    height: 100%;
    display: flex;
@@ -157,41 +182,54 @@ header ul li:hover, header ul a:hover {
    justify-content: center;
    align-items: center;
 }
+
 .section .image {
    align-items: flex-end;
 }
+
 .section .image img {
    width: 330px;
    margin-right: 100px;
 }
+
 .section .content {
    align-items: flex-start;
    gap: 15px;
+   padding: 0 50px 0 0;
 }
+
 .section .content h2 {
    font-size: 2.3rem;
    color: var(--color-06);
    line-height: 2.4rem;
 }
+
 .section .content p {
-   width: 500px;
+   max-width: 500px;
+}
+
+.make-product .content {
+   text-align: right;
 }
 
 .make-product .image {
    align-items: flex-start;
 }
+
 .make-product .image img {
    margin-right: 0;
    margin-left: 100px;
 }
+
 .make-product .content {
    align-items: flex-end;
 }
 
 
 .start {
-   margin-top: 50px;
-   width: 100%; min-width: 1300px; max-width: 1850px;
+   margin-top: 100px;
+   margin: 100px auto 0 auto;
+   width: 100%;
    height: auto;
    padding: 50px;
    display: flex;
@@ -199,8 +237,11 @@ header ul li:hover, header ul a:hover {
    align-items: center;
    background-color: #dddddd;
 }
-.start > div {
-   width: 70%; min-width: 300px; max-width: 1000px;
+
+.start>div {
+   width: 70%;
+   min-width: 300px;
+   max-width: 1000px;
    background-color: white;
    border-radius: 20px;
    padding: 40px;
@@ -213,19 +254,127 @@ header ul li:hover, header ul a:hover {
    box-shadow: 4px 4px 10px #0000003e;
 }
 
-
-
-
-
-
-
-
-/* !TEMP */
-img {
-   width: 100px;
+.contact {
+   margin: 80px auto 0 auto;
+   gap: 0;
 }
+.contact .image img {
+   width: 270px;
+}
+.contact .content {
+   gap: 10px;
+}
+.contact .content form {
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: flex-start;
+   gap: 10px;
+}
+.contact .content form button {
+   padding: 10px 20px;
+   font-family: var(--font-padrao);
+   font-weight: 600;
+   background-color: var(--color-01);
+   border: none;
+   border-radius: 20px;
+   font-size: 0.9rem;
+   cursor: pointer;
+   transition: all .6s;
+   color: #0c0c0c;
+}
+.contact .content form button:hover {
+   cursor: pointer;
+   transition: all .6s;
+   background-color: var(--color-02);
+}
+/* input and div group input */
+.input-group input {
+   max-width: 240px;
+   height: 35px;
+   background-color: transparent;
+   border-radius: .5rem;
+   padding: 0 1rem;
+   border: 2px solid #e5a80f96;
+   font-size: 1rem;
+   transition: border-color .3s cubic-bezier(.25, .01, .25, 1) 0s, color .3s cubic-bezier(.25, .01, .25, 1) 0s, background .2s cubic-bezier(.25, .01, .25, 1) 0s;
+}
+
+.input-group input:hover,
+.input-group input:focus,
+.input-group input-group:hover .input {
+   outline: none;
+   border-color: #05060f;
+}
+
+.input-group .input-group:hover .label,
+.input-group input:focus {
+   color: #05060fc2;
+}
+
+
 footer {
+   margin-top: 100px;
+   width: 100%;
+   height: auto;
+   padding: 50px;
    background-color: #222121;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+}
+footer img {
+   width: 140px;
+}
+footer p {
+   margin-top: 20px;
+   color: white;
+   font-size: 1.1rem;
+   text-align: center;
+}
+footer .developed {
+   color: #ffffff91;
+}
+footer .developed a {
+   color: #f9ff51bf;
+   text-decoration: underline;
+}
+
+
+/* theme dark */
+body.dark {
+   background-color: var(--color-06);
+   color: white;
+   transition: all .4s;
+}
+body.dark header {
+   background-color: #1c1c1cf4;
+   box-shadow: 0 5px 10px #fefefe22;
+}
+body.dark header ul li,
+body.dark header ul a {
+   color: white;
+}
+body.dark header ul li:hover,
+body.dark header ul a:hover {
+   color: var(--color-01);
+}
+body.dark .section h1, body.dark .section h2, body.dark .content h1, body.dark .content p{
+   color: white;
+}
+body.dark .start {
+   background-color: var(--color-06);
+   color: var(--color-06);
+}
+body.dark .get-started-minimalist {
+   color: white;
+}
+body.dark .get-started-minimalist:hover {
+   color: var(--color-06);
+}
+body.dark footer {
+   background-color: #0d0d0d;
 }
 
 /* switch theme */
@@ -235,11 +384,13 @@ footer {
    width: 60px;
    height: 34px;
 }
+
 .toggle-switch-theme .switch input {
    opacity: 0;
    width: 0;
    height: 0;
 }
+
 .toggle-switch-theme .slider {
    position: absolute;
    cursor: pointer;
@@ -251,6 +402,7 @@ footer {
    -webkit-transition: .4s;
    transition: .4s;
 }
+
 .toggle-switch-theme .slider:before {
    position: absolute;
    content: "";
@@ -262,20 +414,158 @@ footer {
    -webkit-transition: .4s;
    transition: .4s;
 }
+
 .toggle-switch-theme input:checked+.slider {
    background-color: #2196F3;
 }
+
 .toggle-switch-theme input:focus+.slider {
    box-shadow: 0 0 1px #2196F3;
 }
+
 .toggle-switch-theme input:checked+.slider:before {
    -webkit-transform: translateX(26px);
    -ms-transform: translateX(26px);
    transform: translateX(26px);
 }
+
 .toggle-switch-theme .slider.round {
    border-radius: 34px;
 }
+
 .toggle-switch-theme .slider.round:before {
    border-radius: 50%;
+}
+
+
+
+
+
+
+
+/* Resposive */
+@media (max-width: 1320px) {
+   .section .image img {
+      width: 230px;
+   }
+}
+@media (max-width: 1200px) {
+   .get-started {
+      margin-top: 5px;
+   }
+   .creative-business .image img {
+      margin-left: 50px;
+   }
+}
+@media (max-width: 900px) {
+   .section .image, .creative-business .image {
+      display: none;
+   }
+   .section .content, .creative-business .content {
+      width: 80%;
+      text-align: center;
+      justify-content: center;
+      align-items: center;
+      padding: 0;
+   }
+   .creative-business .content {
+      max-width: 410px;
+   }
+   .get-started-minimalist {
+      margin: auto;
+   }
+   .input-group input, .contact .content form button{
+      display: block;
+      margin: auto;
+   }
+   .contact .content form {
+      justify-content: center;
+      align-items: center;
+   }
+}
+@media (max-width: 450px) {
+   .section .content, .creative-business .content {
+      width: 100%;
+   }
+   .creative-business .content h1 {
+      font-size: 3rem;
+      line-height: 3rem;
+   }
+}
+
+
+/* Menu responsivo */
+header i.fa-bars {
+   display: none;
+}
+
+.menu {
+   display: none;
+}
+.menu.active {
+   position: fixed;
+   top: 0;
+   right: 0;
+   z-index: 15;
+   width: 100%;
+   height: 100vh;
+   padding: 30px;
+   background-color: rgba(0, 0, 0, 0.972);
+   display: flex;
+   flex-direction: column;
+   gap: 40px;
+   justify-content: center;
+   align-items: center;
+   overflow-y: auto;
+}
+.menu.active ul {
+   list-style: none;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   gap: 20px;
+}
+.menu.active i.fa-xmark {
+   color: white;
+   font-size: 2rem;
+   position: absolute;
+   top: 50px;
+   right: 50px;
+   cursor: pointer;
+   transition: all .4s;
+}
+.menu.active ul li, .menu.active ul a {
+   color: white;
+   text-decoration: none;
+   font-size: 1.5rem;
+   cursor: pointer;
+   transition: all .4s;
+}
+.menu.active ul li:hover, .menu.active ul a:hover, .menu.active i.fa-xmark:hover {
+   cursor: pointer;
+   transition: all .4s;
+   color: var(--color-01);
+}
+
+
+@media (max-width: 780px) {
+   header {
+      padding: 20px 40px;
+   }
+   header nav, header .toggle-switch-theme {
+      display: none;
+   }
+   header i.fa-bars {
+      display: inline;
+      font-size: 1.7rem;
+      cursor: pointer;
+      transition: all .4s;
+      color: var(--color-06);
+   }
+   header i.fa-bars:hover {
+      cursor: pointer;
+      transition: all .4s;
+      color: var(--color-01);
+   }
 }
